--- a/dvc.yaml
+++ b/dvc.yaml
@@ -1,9 +1,9 @@
-stages:
+﻿stages:
   train:
     cmd: python train_and_export.py --model-dir exported_model
     deps:
       - train_and_export.py
-      - requirements.txt
       - data/online_retail_II.xlsx
+      - requirements.txt
     outs:
       - exported_model/rf_churn_pipe.joblib
